Home Changes & Services Mobile Adaptation Finished

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -51,189 +51,15 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 0.5rem;
 }
 
 .about__p{
-  margin-top: 1rem;
+  margin: 1rem 1rem;
   color: white;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   width: 80rem;
 }
 
-@media screen and (max-width: 1300px) {
-  .about__h1 {
-    font-size: 40px;
-  }
+@media screen and (max-width: 1114px) {
 
-  .about__p {
-    font-size: 20px;
-  }
-
-  .about__ul {
-    justify-content: space-evenly;
-  }
-}
-
-@media screen and (max-width: 1120px) {
-  .about__nextbutton {
-    font-size: 80px;
-  }
-}
-
-@media screen and (max-width: 840px) {
-  .about__description {
-    width: 80vw;
-  }
-
-  .about__nextbutton,
-  .about__prevbutton {
-    font-size: 75px;
-  }
-}
-
-@media screen and (max-width: 685px) {
-  .about {
-    height: calc(100dvh - 90px);
-    margin: 0;
-  }
-
-  .about__content{
-    margin-top: 60px;
-  }
-
-  .about__h1 {
-    font-size: 35px;
-  }
-
-  .about__p {
-    font-size: 17px;
-  }
-
-  .about__li {
-    width: 17vw;
-  }
-
-  .about__icon {
-    font-size: 35px;
-    margin-bottom: 10px;
-  }
-
-  .icon__span {
-    font-size: 14px;
-  }
-
-  .about__skills {
-    width: 75vw;
-  }
-
-  .about__nextbutton,
-  .about__prevbutton {
-    font-size: 65px;
-    opacity: 1;
-  }
-}
-
-@media screen and (max-width: 530px) {
-  .about__description {
-    height: 50dvh;
-    width: 70vw;
-  }
-
-  .about__p {
-    font-size: 16px;
-  }
-}
-
-@media screen and (max-width: 460px) {
-  .about__h1 {
-    font-size: 31px;
-  }
-
-  .about__p {
-    font-size: 15px;
-  }
-
-  .about__ul {
-    align-items: center;
-  }
-
-  .about__li {
-    height: 70%;
-  }
-
-  .icon__span {
-    font-size: 13px;
-  }
-
-  .about__nextbutton,
-  .about__prevbutton {
-    font-size: 55px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .about__h1 {
-    font-size: 27px;
-  }
-
-  .about__p {
-    font-size: 13px;
-  }
-
-  .separator {
-    width: 65%;
-  }
-
-  .about__skills {
-    height: 35vh;
-    width: 85vw;
-  }
-
-  .about__ul {
-    height: 16vh;
-  }
-
-  .about__li {
-    width: 100%;
-  }
-
-  .about__icon {
-    font-size: 25px;
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .about {
-    height: calc(100dvh - 70px);
-  }
-
-  .about__h1 {
-    font-size: 17px;
-  }
-
-  .about__p {
-    font-size: 10px;
-  }
-
-  .about__description {
-    width: 75vw;
-  }
-
-  .about__skills {
-    height: 30vh;
-  }
-
-  .about__icon {
-    font-size: 23px;
-  }
-
-  .icon__span {
-    font-size: 9px;
-  }
-
-  .about__nextbutton,
-  .about__prevbutton {
-    font-size: 40px;
-  }
 }
