--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   --home-frontpage-size: 105%;
   --home-section3-background-size: 105%;
   --home-section3-img-size: 105%;
-  --footer-height: 50px;
+  --footer-height: 1.5rem;
   --footer-icons-size: 30px;
   --footer-icons-grow: 50px;
   --icon-container-width: 400px;
