--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .contact {
-  height: calc( 100dvh - var(--margin-top-size)) ;
+  height: calc( 100dvh - var(--margin-top-size) - var(--footer-height) ) ;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -114,4 +114,53 @@
 
 .contact__icon{
   font-size: 2.1rem;
+}
+
+@media screen and (max-width: 640px) {
+
+  .form{
+    height: 36rem;
+    width: 100vw;
+    margin: 0 0.5rem;
+  }
+
+  .contact__h2 {
+    font-size: 2rem;
+  }
+
+  .form__input{
+    width: 95%;
+    font-size: 0.8rem;
+  }
+
+  .form__input--message{
+    width: 95%;
+    font-size: 0.8rem;
+    }
+
+    .form__submit{
+      font-size: 1rem;
+    }
+    
+    .contact__info{
+      width: 95vw;
+    }
+
+    .contact__span{
+      font-size: 1rem;
+    }
+
+    .contact__icon__box{
+      width: 13rem;
+    }
+
+    .icon__item{
+      width: 3rem;
+      height: 3rem;
+    }
+
+    .contact__icon{
+      font-size: 1.5rem;
+    }
+
 }
