--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,8 @@ body {
   overflow-x: hidden;
 }
 
+
+
 @media screen and (max-width: 1114px) {
   :root {
     --margin-top-size: 2.5rem;
@@ -64,5 +66,12 @@ body {
 @media screen and (max-width: 600px) {
   :root {
     --home-frontpage-size: 280%;
+    --home-section3-background-size: 400%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  :root {
+    --home-section3-background-size: 460%;
   }
 }
