--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -88,6 +88,7 @@
 
 .contact__span{
   font-size: 1.4rem;
+  color: white;
 }
 
 .contact__icon__box{
@@ -102,6 +103,7 @@
   border-radius: 50%;
   border: .2rem solid #0010CD;
   display: flex;
+  color: white;
   align-items: center;
   justify-content: center;
   transition-timing-function: ease-in;
@@ -110,6 +112,7 @@
 
 .icon__item:hover{
   background-color: #0010CD;
+  color: white;
 }
 
 .contact__icon{
