--- a/src/components/Home/WhyTopTier/WhyTopTier.css
+++ b/src/components/Home/WhyTopTier/WhyTopTier.css
@@ -33,3 +33,30 @@
 .whytoptier__btn:hover{
     color: #9F4FFF;
 }
+
+@media screen and (max-width: 1336px) {
+
+    .whytoptier__h2{
+        font-size: 2.5rem;
+        width: 95vw;
+        text-align: center;
+    }
+    
+    .whytoptier__p{
+        font-size: 1rem;
+        width: 95vw;
+    }
+
+}
+
+@media screen and (max-width: 450px) {
+
+    .whytoptier__h2{
+        font-size: 2rem;
+    }
+    
+    .whytoptier__p{
+        font-size: 0.9rem;
+    }
+
+}
