--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,22 @@
   --primary-color: #f2f2f2;
   --secondary-color: #5400B9;
   --thrid-color: #363636;
+  --fourth-color: #7400FF;
+  --fiveth-color: #273E8E;
+  --blue-card-color: #0030CF;
+  --blue-form-color: #0010CD;
+  --gray-card-color: #E9E9E9;
+  --gray-form-color: #A4A4A4;
+  --black-color: #000;
   --margin-top-size: 3rem;
   --home-frontpage-size: 105%;
   --home-section3-background-size: 105%;
   --home-section3-img-size: 110%;
-  --services-back-size: 100%;
+  --services-back-size: 100%; 
   --footer-height: 1.5rem;
-  --footer-icons-size: 30px;
-  --footer-icons-grow: 50px;
-  --icon-container-width: 400px;
+  --footer-icons-size: 1.9rem;
+  --footer-icons-grow: 3rem;
+  --icon-container-width: 25rem;
 }
 
 * {
