--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,7 +22,7 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 10rem;
-  border: 4px solid blue;
+  border: 4px solid var(--blue-card-color);
 }
 
 .about__img1{
@@ -54,7 +54,7 @@
 
 .about__p{
   margin: 1rem 1rem;
-  color: white;
+  color: var(--primary-color);
   font-size: 1.3rem;
   width: 80rem;
 }
