--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  background-color: white;
+  background-color: var(--primary-color);
   display: flex;
   justify-content: flex-start;
 }
@@ -112,7 +112,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: var(--primary-color);
   }
 
   .nav__li {
