--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   --home-section3-background-size: 105%;
   --home-section3-img-size: 110%;
   --services-back-size: 100%; 
-  --footer-height: 1.5rem;
+  --footer-height: 2rem;
   --footer-icons-size: 1.9rem;
   --footer-icons-grow: 3rem;
   --icon-container-width: 25rem;
@@ -26,6 +26,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 body {
