--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.about__section1 {
+.about__container {
   height: 75dvh;
   width: 90vw;
   display: flex;
@@ -15,7 +15,7 @@
   align-items: center;
 }
 
-.about__img1__container{
+.about__img__box{
   position: absolute;
   width: 40rem;
   height: 40rem;
@@ -25,7 +25,7 @@
   border: 4px solid var(--blue-card-color);
 }
 
-.about__img1{
+.about__img{
   margin-left: -11.5rem;
 }
 
@@ -65,7 +65,7 @@
     margin: 0;
   }
 
-  .about__section1 {
+  .about__container {
     height: 35rem;
     width: 100vw;
   }
@@ -76,13 +76,13 @@
     margin-bottom: 24rem;
   }
 
-  .about__img1__container{
+  .about__img__box{
     width: 30rem;
     height: 30rem;
     margin-right: 3rem;
   }
   
-  .about__img1{
+  .about__img{
     height: 35rem;
   }
 
@@ -95,7 +95,7 @@
 
 @media screen and (max-width: 550px) {
 
-  .about__section1 {
+  .about__container {
     height: 22rem;
   }
 
@@ -105,13 +105,13 @@
     margin-bottom: 15rem;
   }
 
-  .about__img1__container{
+  .about__img__box{
     width: 18rem;
     height: 18rem;
     margin-right: 3rem;
   }
   
-  .about__img1{
+  .about__img{
     height: 23rem;
     margin-left: -8rem;
   }
@@ -131,13 +131,13 @@
     margin-bottom: 10rem;
   }
 
-  .about__img1__container{
+  .about__img__box{
     width: 15rem;
     height: 15rem;
     margin-right: 3rem;
   }
   
-  .about__img1{
+  .about__img{
     height: 20rem;
     margin-left: -7rem;
   }
